<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">车载音乐</string>
    <string name="tab_songs">全部歌曲</string>
    <string name="tab_artists">歌手</string>
    <string name="tab_categories">分类</string>
    <string name="tab_search">搜索</string>
    <string name="search_hint">搜索歌曲名、歌手…</string>
    <string name="no_songs">未找到音乐文件\n请插入USB设备</string>
    <string name="scanning">正在扫描音乐…</string>
    <string name="play_all">全部播放</string>
    <string name="sort">排序</string>
    <string name="unknown_artist">未知歌手</string>
    <string name="unknown_album">未知专辑</string>
    <string name="songs_count">%d 首歌曲</string>
    <string name="no_search_result">没有找到匹配的歌曲</string>
    <string name="rescan">重新扫描</string>
    <string name="tab_most_played">常听</string>
    <string name="no_play_history">还没有播放记录\n多听几首歌曲后这里会显示你的常听歌曲</string>
    <string name="play_count_format">播放 %d 次</string>

    <string name="tab_playlists">播放列表</string>
    <string name="create_playlist">新建列表</string>
    <string name="create_playlist_title">新建播放列表</string>
    <string name="rename_playlist_title">重命名播放列表</string>
    <string name="playlist_name_hint">请输入列表名称</string>
    <string name="delete_playlist_title">删除播放列表</string>
    <string name="delete_playlist_confirm">确定删除播放列表 \"%s\" 吗？</string>
    <string name="add_to_playlist">添加到播放列表</string>
    <string name="added_to_playlist">已添加到 \"%s\"</string>
    <string name="remove_from_playlist">从列表中移除</string>
    <string name="no_playlists">还没有播放列表\n点击 + 创建一个吧</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_delete">删除</string>
    <string name="btn_rename">重命名</string>

    <string name="tab_todo">待下载</string>
    <string name="todo_add_hint">输入想下载的歌曲…</string>
    <string name="todo_add_title">添加待下载</string>
    <string name="todo_edit_title">编辑</string>
    <string name="todo_empty">还没有待下载的歌曲\n点击 + 添加</string>
    <string name="todo_clear_done">清除已完成</string>
    <string name="todo_clear_done_confirm">确定清除所有已完成的项目吗？</string>
</resources>
